# SM-Analytics

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.dev.yml  docker-compose.integration.yml  docker-compose.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/workflows/: CODEOWNERS  ci.yml  docs.yml  lint.yml  tests.yml
backend/: .gitignore  pyproject.toml
backend/apps/gateway/: main.py
backend/libs/cache/: README.md  __init__.py  config.py
backend/libs/database/: README.md  __init__.py  base.py  config.py  engine.py  exceptions.py  health.py  lifespan.py  mixins.py  session.py
backend/libs/exceptions/: README.md
backend/libs/observability/: README.md
backend/libs/observability/context/: __init__.py  vars.py
backend/libs/observability/filters/: context.py  redaction.py
backend/libs/observability/formatters/: json.py
backend/libs/observability/logging/: __init__.py  setup.py
backend/libs/observability/middleware/: asgi.py
backend/libs/security/: README.md
backend/libs/settings/: README.md  __init__.py  base.py  core.py  environment.py  exceptions.py  loaders.py  service.py
backend/libs/testing/: README.md
backend/libs/types/: README.md
backend/libs/utils/: README.md
backend/services/auth/: .env.example  README.md  alembic.ini  main.py
backend/services/auth/alembic/: env.py
backend/services/auth/app/core/: config.py
backend/services/auth/app/models/: __init__.py  rbac.py  user.py
backend/services/gateway/: .env.example  README.md  main.py
backend/services/gateway/app/core/: config.py
backend/services/users/: .env.example  README.md  main.py
backend/services/users/alembic/: env.py
backend/services/users/app/core/: config.py
backend/services/users/app/models/: __init__.py  preference.py  profile.py
backend/tests/: conftest.py
backend/tests/fixtures/: containers.py  database.py  engine.py  settings.py
backend/tests/integration/database/: test_auth_schema.py  test_database.py  test_users_schema.py
backend/tests/libs/: test_observability.py  test_settings.py  verify_settings.py
backend/tests/unit/libs/: test_settings.py  verify_settings.py
deployment/docker/vector/: vector.yaml
docker/compose/: base.yml  dev.yml  integration.yml
docs/architecture/: services.md
docs/architecture/decisions/: 0002-persistence-strategy.md  0003-identity-schema-strategy.md  0004-identifier-strategy.md
docs/decisions/: 0002-python-version.md  0003-fastapi.md  0004-postgresql.md  0005-kafka.md  README.md
docs/validation/: repository-validation.md
scripts/: bootstrap.sh  clean.sh  format.sh  lint.sh  precommit.sh  test.sh
src/sm_analytics/: __init__.py
