[project]
name = "sm-analytics"
version = "0.1.0"
description = "Stock market analytics and trading platform."
readme = "README.md"
requires-python = ">=3.12"

license = { text = "Apache-2.0" }

authors = [
    { name = "Pawan Kumar Gwal" }
]

dependencies = []

[project.optional-dependencies]

dev = [
    "ruff>=0.12",
    "mypy>=1.17",
    "pre-commit>=4.3",
]

test = [
    "pytest>=8.4",
    "pytest-cov>=6.2",
]

docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.6",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
    "SIM",
    "N",
    "C4",
]

[tool.ruff.format]

quote-style = "double"

indent-style = "space"

skip-magic-trailing-comma = false

line-ending = "lf"

[tool.mypy]
python_version = "3.12"
strict = false
warn_unused_configs = true

warn_return_any = true

check_untyped_defs = true

pretty = true

strict_optional = true
ignore_missing_imports = true

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]

testpaths = [
    "backend/tests",
]

python_files = [
    "test_*.py",
]

[tool.coverage.run]

branch = true

source = [
    "backend",
]
