[project]
name = "sm-analytics-backend"
version = "0.1.0"
description = "SM Analytics Backend Platform Workspace"
authors = [
    { name = "SM Analytics Team" }
]
dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
    "services",
    "libs"
]

[tool.ruff]
line-length = 88

[tool.mypy]
python_version = "3.10"
strict = true

[tool.coverage.run]
source = ["services", "libs"]
